<resources>
    <string name="app_name">Reservate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pantalla_carga">ActivityPantallaCarga</string>
    <string name="texto_entrar">Entrar</string>
    <string name="texto_registrarse">REGISTRARSE</string>
    <string name="texto_username">Username</string>
    <string name="texto_Password">Password</string>
    <string name="img_atras">img_atras</string>
    <string name="img_confirmar">img_confirmar</string>
    <string name="img_logo">img_logo</string>
    <string name="texto_correo">Correo electrónico</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_apellido">Apellido</string>
    <string name="texto_contraseña">Contraseña</string>
    <string name="texto_conf_contra">Confirmar contraseña</string>
    <string name="texto_documento">Documento</string>
    <string name="texto_telefono">Teléfono</string>
    <string name="texto_direccion">Direccion</string>
    <string name="texto_tipo">Tipo Usuario</string>
    <string name="texto_ciudad">Ciudad</string>
    <string-array name="combo_tipo">
        <item name="item1">Empleado</item>
        <item name="item2">Cliente</item>
    </string-array>
    <string name="boton_logout">Cerrar Sesion</string>
    <string name="boton_seleccionar_fecha">Seleccionar Fecha</string>
    <string name="boton_siguiente">Siguinte</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="img_usuarios">img_usuarios</string>
    <string name="titulo">Confirmar</string>
    <string name="titulo1">Cancelar</string>
    <string name="mensaje_cliente">¿Confirmar reserva?</string>
    <string name="mensaje_empleado">¿Cancelar reserva?</string>
    <string name="boton_si">Si</string>
    <string name="boton_no">No</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="boton_ok">Ok</string>
    <string name="string_fecha">Aquí va su fecha.</string>
    <string name="prueba_nombre">Nombre</string>
    <string name="prueba_fecha">Fecha</string>
    <string name="prueba_ape">Apellido</string>
    <string name="listar_usuarios">LISTAR USUARIOS REGISTRADOS.</string>
</resources>
