<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tecnoinfsanjose.tareaandroiduno.Vistas.Fragments.LogIn"
    android:background="@color/colorFondo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/img_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorFondo"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:labelFor="@+id/editText"
        android:hint="@string/texto_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlanco"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_below="@+id/editText"
        android:password="true"
        android:layout_marginTop="26dp"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/texto_Password"
        android:textColorHint="@color/colorBlanco"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginTop="47dp"
        app:cardBackgroundColor="@color/colorAmarillo"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cardView"
            android:layout_below="@+id/editText2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/texto_entrar"
                android:textColor="@color/colorFondo"
                android:textSize="20dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/texto_registrarse"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textColor="@android:color/background_light"
        android:text="@string/listar_usuarios" />
</RelativeLayout>
